--- a/catalog/view/theme/default/template/product/product.twig
+++ b/catalog/view/theme/default/template/product/product.twig
@@ -106,9 +106,9 @@
                 {% endif %}
                 {% if rating %}
                 <span
-                  class="tag is-medium {{ rating >= 4 ? 'is-success' : '' }}{{ rating >= 3 and rating < 4 ? 'is-warning' : '' }}{{ rating < 3 ? 'is-danger' : '' }} is-light">
+                  class="tag is-medium is-light is-clickable" data-target="#reviews">
                   <span class="icon-text">
-                    <span class="icon">
+                    <span class="icon has-text-warning">
                       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                         class="bi bi-star-fill" viewBox="0 0 16 16">
                         <path
@@ -553,14 +553,11 @@
                       </div>
                       {% endif %}
                       {% if product.rating %}
-                      <span
-                        class="tag {{ product.rating >= 4 ? 'is-success' : '' }}{{ product.rating >= 3 and product.rating < 4 ? 'is-warning' : '' }}{{ product.rating < 3 ? 'is-danger' : '' }}">
+                      <span class="tag is-light">
                         <span class="icon-text">
-                          <span class="icon">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                              class="bi bi-star-fill" viewBox="0 0 16 16">
-                              <path
-                                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                          <span class="icon has-text-warning">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                              <path d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z"/>
                             </svg>
                           </span>
                           <span class="has-text-weight-bold">{{ product.rating }}</span>
@@ -631,15 +628,20 @@
     });
   });
 
-  $('body').on('click', '.tabs li', function () {
+  $('body').on('click', '#product-page [data-target]', function () {
     if ($(this).data('target')) {
       $(this).siblings().removeClass('is-active');
       $(this).addClass('is-active');
 
-      let offset = $(window).width() > 768 ? 120 : 60;
-      let top = $($(this).data('target')).offset().top;
-
-      $('html, body').stop().animate({ scrollTop: top - offset }, 300);
+      //let offset = $(window).width() > 768 ? 120 : 60;
+      let section = $($(this).data('target'))[0];
+    
+      if (section) {
+        window.scrollTo({
+          top: section.offsetTop,
+          behavior: 'smooth'
+        });
+      }
     }
   });
 
