--- a/admin/view/template/catalog/review_form.twig
+++ b/admin/view/template/catalog/review_form.twig
@@ -57,6 +57,25 @@
               <textarea name="reply" rows="5" placeholder="{{ entry_reply }}" id="input-reply" class="form-control">{{ reply }}</textarea>
             </div>
           </div>
+          {% if images %}
+          <div class="form-group">
+            <label class="col-sm-2 control-label" for="input-images">{{ entry_images }}</label>
+            <div class="col-sm-10">
+              <div class="review-images">
+                {% for image in images %}
+                <div class="review-image-item" style="display: inline-block; margin-right: 10px; text-align: center;">
+                  <a href="{{ image.popup }}" target="_blank" class="img-thumbnail" style="display: block; margin-bottom: 5px;">
+                    <img src="{{ image.thumb }}" alt="Review Image" />
+                  </a>                  
+                  <button class="btn btn-danger btn-sm" type="button" onclick="removeReviewImage({{ review_id }}, '{{ image.filename }}')">
+                    <i class="fa fa-trash"></i>
+                  </button>
+                </div>
+                {% endfor %}
+              </div>
+            </div>
+          </div>
+          {% endif %}
           <div class="form-group required">
             <label class="col-sm-2 control-label" for="input-name">{{ entry_rating }}</label>
             <div class="col-sm-10">
@@ -133,33 +152,56 @@
       </div>
     </div>
   </div>
-  <script type="text/javascript"><!--
-$('.datetime').datetimepicker({
-	language: '{{ datepicker }}',
-	pickDate: true,
-	pickTime: true
-});
-//--></script>
-  <script type="text/javascript"><!--
-$('input[name=\'product\']').autocomplete({
-	'source': function(request, response) {
-		$.ajax({
-			url: 'index.php?route=catalog/product/autocomplete&user_token={{ user_token }}&filter_name=' +  encodeURIComponent(request),
-			dataType: 'json',
-			success: function(json) {
-				response($.map(json, function(item) {
-					return {
-						label: item['name'],
-						value: item['product_id']
-					}
-				}));
-			}
-		});
-	},
-	'select': function(item) {
-		$('input[name=\'product\']').val(item['label']);
-		$('input[name=\'product_id\']').val(item['value']);
-	}
-});
-//--></script></div>
+  <script>
+    $('.datetime').datetimepicker({
+      language: '{{ datepicker }}',
+      pickDate: true,
+      pickTime: true
+    });
+
+    $('input[name=\'product\']').autocomplete({
+      'source': function(request, response) {
+        $.ajax({
+          url: 'index.php?route=catalog/product/autocomplete&user_token={{ user_token }}&filter_name=' +  encodeURIComponent(request),
+          dataType: 'json',
+          success: function(json) {
+            response($.map(json, function(item) {
+              return {
+                label: item['name'],
+                value: item['product_id']
+              }
+            }));
+          }
+        });
+      },
+      'select': function(item) {
+        $('input[name=\'product\']').val(item['label']);
+        $('input[name=\'product_id\']').val(item['value']);
+      }
+    });
+
+    function removeReviewImage(review_id, filename) {
+      if (!confirm('{{ text_confirm_delete }}')) {
+        return;
+      }
+
+      $.ajax({
+        url: 'index.php?route=catalog/review/removeImage&user_token={{ user_token }}',
+        type: 'post',
+        data: { review_id: review_id, filename: filename },
+        dataType: 'json',
+        success: function(json) {
+          if (json['success']) {
+            location.reload();
+          } else {
+            alert(json['error']);
+          }
+        },
+        error: function(xhr, ajaxOptions, thrownError) {
+          alert(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
+        }
+      });
+    }
+  </script> 
+</div>
 {{ footer }}
