--- a/admin/view/template/setting/setting.twig
+++ b/admin/view/template/setting/setting.twig
@@ -1336,6 +1336,67 @@
                   <input type="hidden" name="config_icon" value="{{ config_icon }}" id="input-icon" />
                 </div>
               </div>
+              <div class="form-group">
+                <label for="input-category-image-mode" class="col-sm-2 control-label">{{ entry_category_image_mode }}</label>
+                <div class="col-sm-10">
+                  <select name="config_category_image_mode" id="input-category-image-mode" class="form-control">
+                    {% set modes = ['default', 'crop', 'scale'] %}
+                    {% for item in modes %}
+                    {% if item == config_category_image_mode %}
+                    <option value="{{ item }}" selected>{{ item }}</option>
+                    {% else %}
+                    <option value="{{ item }}">{{ item }}</option>
+                    {% endif %}
+                    {% endfor %}
+                  </select>
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="input-product-list-image-mode" class="col-sm-2 control-label">{{ entry_product_list_image_mode }}</label>
+                <div class="col-sm-10">
+                  <select name="config_product_list_image_mode" id="input-product-list-image-mode" class="form-control">
+                    {% set modes = ['default', 'crop', 'scale'] %}
+                    {% for item in modes %}
+                    {% if item == config_product_list_image_mode %}
+                    <option value="{{ item }}" selected>{{ item }}</option>
+                    {% else %}
+                    <option value="{{ item }}">{{ item }}</option>
+                    {% endif %}
+                    {% endfor %}
+                  </select>
+                  <small class="text-info">{{ help_product_list_image_mode }}</small>
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="input-product-thumb-image-mode" class="col-sm-2 control-label">{{ entry_product_thumb_image_mode }}</label>
+                <div class="col-sm-10">
+                  <select name="config_product_thumb_image_mode" id="input-product-thumb-image-mode" class="form-control">
+                    {% set modes = ['default', 'crop', 'scale'] %}
+                    {% for item in modes %}
+                    {% if item == config_product_thumb_image_mode %}
+                    <option value="{{ item }}" selected>{{ item }}</option>
+                    {% else %}
+                    <option value="{{ item }}">{{ item }}</option>
+                    {% endif %}
+                    {% endfor %}
+                  </select>
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="input-product-popup-image-mode" class="col-sm-2 control-label">{{ entry_product_popup_image_mode }}</label>
+                <div class="col-sm-10">
+                  <select name="config_product_popup_image_mode" id="input-product-popup-image-mode" class="form-control">
+                    {% set modes = ['default', 'crop', 'scale', 'original'] %}
+                    {% for item in modes %}
+                    {% if item == config_product_popup_image_mode %}
+                    <option value="{{ item }}" selected>{{ item }}</option>
+                    {% else %}
+                    <option value="{{ item }}">{{ item }}</option>
+                    {% endif %}
+                    {% endfor %}
+                  </select>
+                </div>
+              </div>
             </div>
             <div class="tab-pane" id="tab-mail">
               <fieldset>
